<package format="2">
  <name>wiimote</name>
  <version>1.11.0</version>
  <license>GPL</license>
  <description>
    The wiimote package allows ROS nodes to communicate with a Nintendo Wiimote
    and its related peripherals, including the Nunchuk, Motion Plus, and
    (experimentally) the Classic. The package implements a ROS node that uses
    Bluetooth to communicate with the Wiimote device, obtaining accelerometer
    and gyro data, the state of LEDs, the IR camera, rumble (vibrator),
    buttons, joystick, and battery state. The node additionally enables ROS
    nodes to control the Wiimote's LEDs and vibration for feedback to the human
    Wiimote operator. LEDs and vibration may be switched on and off, or made to
    operate according to a timed pattern.
  </description>

  <url type="website">http://www.ros.org/wiki/wiimote</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author>Andreas Paepcke</author>
  <author>Melonee Wise</author>
  <author email="mark.d.horn@intel.com">Mark Horn</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>python-cwiid</build_depend>
  <build_depend>cwiid-dev</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roslint</build_depend>
  
  <exec_depend>genmsg</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-cwiid</exec_depend>
  <exec_depend>cwiid</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
